--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/abs_test
+spring.datasource.username = root
+spring.datasource.password = Mysql0909100+
 
